--- a/if -이프/html/main.html
+++ b/if -이프/html/main.html
@@ -146,7 +146,7 @@
               <img src="../img/image 2.png" />
             </p>
 
-            <img class="icon" src="../img/은색 헤드셋.png" />
+            <img class="icon" src="../img/은색 헤드셋.png"/>
             <a href="#">
               <button class="start-btn">더 많은 노래 찾기</button>
             </a>
@@ -177,7 +177,7 @@
             <p>힙합</p>
           </div>
           <div class="main-img">
-            <img src="../img/드라마 ost/드라마_도깨비_포스터2 (1).jpg" />
+            <img src="../img/드라마 ost/이태원 클라스.png" />
             <p>드라마 OST</p>
           </div>
           <div class="main-img">
