--- a/if -이프/html/K-pop.html
+++ b/if -이프/html/K-pop.html
@@ -48,18 +48,56 @@
    <main class="main">
       <div class="left">
        <div class="list">
-        <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-       </ul>
+        <section>
+          <h2 class="section-title">느낌별 스테이션</h2>
+          <div class="stations">
+            <img
+              class="station"
+              src="../img/K-pop/방탄소년단.jpg" width="100px" height="100px"
+              alt="신나고 싶을 때 듣는 노래 "
+            />
+            <img
+              class="station"
+              src="../Music -Play/resource/img/img_station_2.png"
+              alt="팝송 같은 한국 노래"
+            />
+            <img
+              class="station"
+              src="../Music -Play/resource/img/img_station_3.png"
+              alt="게임 음악"
+            />
+            <img
+              class="station"
+              src="../Music -Play/resource/img/img_station_4.png"
+              alt="드라마 주인공이 된 듯한"
+            />
+            <img
+              class="station"
+              src="../Music -Play/resource/img/img_station_5.png"
+              alt="헤어졌을때 듣기 좋은 노래"
+            />
+            <img
+              class="station"
+              src="../Music -Play/resource/img/img_station_6.png"
+              alt="귀여운 노래"
+            />
+            <img
+              class="station"
+              src="../Music -Play/resource/img/img_station_7.png"
+              alt="악동같은 노래"
+            />
+            <img
+              class="station"
+              src="../Music -Play/resource/img/img_station_8.png"
+              alt="자존감 높이는 노래"
+            />
+            <img
+              class="station"
+              src="../Music -Play/resource/img/img_station_9.png"
+              alt="조용히 듣기 좋은 노래"
+            />
+          </div>
+        </section>
        </div>
      </div>
 
