--- a/if -이프/html/K-pop.html
+++ b/if -이프/html/K-pop.html
@@ -54,27 +54,27 @@
             <img
               class="station"
               src="../img/K-pop/방탄소년단.jpg" width="100px" height="100px"
-              alt="신나고 싶을 때 듣는 노래 "
+              alt="드라이브 할 때 듣는 노래 "
             />
             <img
               class="station"
               src="../Music -Play/resource/img/img_station_2.png"
-              alt="팝송 같은 한국 노래"
+              alt="썸 탈때 듣기 좋은 노래"
             />
             <img
               class="station"
               src="../Music -Play/resource/img/img_station_3.png"
-              alt="게임 음악"
+              alt="게임 타이틀 곡"
             />
             <img
               class="station"
               src="../Music -Play/resource/img/img_station_4.png"
-              alt="드라마 주인공이 된 듯한"
+              alt="운동할 때 듣는 노래"
             />
             <img
               class="station"
               src="../Music -Play/resource/img/img_station_5.png"
-              alt="헤어졌을때 듣기 좋은 노래"
+              alt="이별 후 듣기 좋은 노래"
             />
             <img
               class="station"
@@ -84,7 +84,7 @@
             <img
               class="station"
               src="../Music -Play/resource/img/img_station_7.png"
-              alt="악동같은 노래"
+              alt="외국에서 더 인기많은 노래"
             />
             <img
               class="station"
@@ -94,7 +94,7 @@
             <img
               class="station"
               src="../Music -Play/resource/img/img_station_9.png"
-              alt="조용히 듣기 좋은 노래"
+              alt="공부할 때 듣기 좋은 노래"
             />
           </div>
         </section>
