--- a/if -이프/html/main.html
+++ b/if -이프/html/main.html
@@ -139,17 +139,12 @@
       <div id="content-1">
         <div class="front-left">
           <div class="P-tag">
+            <img class="icon" src="../img/은색 헤드셋.png" />
             <p>Hi, nice to meet you</p>
             <p>
-              If you want to hear a song
-              <br />about how you feel right now...
+              Music Is My Life
               <img src="../img/image 2.png" />
             </p>
-
-            <img class="icon" src="../img/은색 헤드셋.png"/>
-            <a href="#">
-              <button class="start-btn">더 많은 노래 찾기</button>
-            </a>
           </div>
         </div>
 
