--- a/if -이프/html/main.html
+++ b/if -이프/html/main.html
@@ -143,7 +143,9 @@
             <p>Hi, nice to meet you</p>
             <p>
               Music Is My Life
-              <img src="../img/image 2.png" />
+              <img
+                src="../img/bb-forward-.svg" width="100px" 
+              />
             </p>
           </div>
         </div>
