--- a/if -이프/html/main.html
+++ b/if -이프/html/main.html
@@ -49,7 +49,7 @@
     <nav class="navbar navbar-dark bg-dark fixed-top">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
-          <img src="../img/Group 125.png" width="60px" height="60px" />
+          <img src="../img/기타/Group 125.png" width="60px" height="60px" />
         </a>
         <div class="search">
           <input type="text" />
@@ -74,12 +74,12 @@
           <!-- 햄버거 -->
           <div class="offcanvas-header">
             <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">
-              <img src="../img/Group 123.png" width="30px" height="30px" />
+              <img src="../img/기타/Group 123.png" width="30px" height="30px" />
             </h5>
             <a href="../html/로그인.html">
               <button class="offcanvas-btn-lo">로그인</button>
             </a>
-            <a href="">
+            <a href="../html/회원가입.html">
               <button class="offcanvas-btn">회원가입</button>
             </a>
 
@@ -139,12 +139,12 @@
       <div id="content-1">
         <div class="front-left">
           <div class="P-tag">
-            <img class="icon" src="../img/은색 헤드셋.png" />
+            <img class="icon" src="../img/기타/은색 헤드셋.png" />
             <p>Hi, nice to meet you</p>
             <p>
               Music Is My Life
               <img
-                src="../img/bb-forward-.svg" width="100px" 
+                src="../img/기타/bb-forward-.svg" width="100px" 
               />
             </p>
           </div>
@@ -178,7 +178,7 @@
             <p>드라마 OST</p>
           </div>
           <div class="main-img">
-            <img src="../img/뽀로로.jpg" />
+            <img src="../img/기타/뽀로로.jpg" />
             <p>어린이 노래</p>
           </div>
           <div class="main-img">
