--- a/if -이프/html/로그인.html
+++ b/if -이프/html/로그인.html
@@ -30,7 +30,7 @@
           <button type="submit">Login</button>
         </div>
         <div class="caption">
-          <a href="">forget password?</a>
+          <a href="../html/회원가입.html">회원이 아니라면 회원가입 하러가기</a>
         </div>
       </form>
     </section>
