--- a/if -이프/html/K-pop.html
+++ b/if -이프/html/K-pop.html
@@ -6,12 +6,16 @@
     <title>k-pop</title>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="../css/k-pop.css" />
   </head>
   <body>
     <nav class="navbar navbar-dark bg-dark fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="../html/main.html">
           <img src="../img/기타/Group 125.png" width="60px" height="60px" />
         </a>
         <div class="search">
@@ -97,11 +101,9 @@
         </div>
       </div>
     </nav>
-    <!-- nav끝 -->
+    <!-- nav 끝 -->
     <head>
-      <a href="../html/main.html">
-        <img src="../img/기타/Group 125.png">
-      </a>
+     
       <div class="gallery">
         <div class="gallery-container">
           <img
