--- a/if -이프/html/로그인.html
+++ b/if -이프/html/로그인.html
@@ -9,7 +9,13 @@
   </head>
   <body>
     <section class="login-form">
-      <h1>LOGIN</h1>
+      <div class="logo">
+        <a href="../html/main.html">
+          <img src="../img/기타/Group 125.png" width="40px" height="40px" />
+        </a>
+        <h1>LOGIN</h1>
+      </div>
+     
       <form action="">
         <div class="int-area">
           <input type="text" name="id" id="id" autocomplete="off" required />
