--- a/if -이프/html/로그인.html
+++ b/if -이프/html/로그인.html
@@ -10,7 +10,7 @@
   <body>
     <section class="login-form">
       <div class="logo">
-        <a href="../html/main.html">
+        <a href="../html/IF-main.html">
           <img src="../img/기타/Group 125.png" width="40px" height="40px" />
         </a>
         <h1>LOGIN</h1>
