--- a/if -이프/html/회원가입.html
+++ b/if -이프/html/회원가입.html
@@ -11,7 +11,7 @@
   <body>
     <div class="member">
       <!-- 1. 로고 -->
-      <a href="../html/main.html">
+      <a href="../html/IF-main.html">
         <img class="logo" src="../img/기타/Group 125.png" />
       </a>
       <b
