--- a/if -이프/index.html
+++ b/if -이프/index.html
@@ -10,7 +10,7 @@
     />
     <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="../css/main.css" />
+    <link rel="stylesheet" href="../css/IF-main.css" />
     <link rel="stylesheet" href="../css/snow.css" />
   </head>
   <body>
