--- a/if -이프/html/IF-main.html
+++ b/if -이프/html/IF-main.html
@@ -192,5 +192,17 @@
         <div class="middle-right"></div>
       </div>
     </main>
+    <footer>
+      <!-- 7. 푸터 -->
+      <div class="member-footer">
+       <div>
+         <a href="#none">이용약관</a>
+         <a href="#none">개인정보처리방침</a>
+         <a href="#none">책임의 한계와 법적고지</a>
+         <a href="#none">회원정보 고객센터</a>
+       </div>
+       <span><a href="#none">IF Corp.</a></span>
+     </div>
+   </footer>
   </body>
 </html>
