--- a/if -이프/html/K-pop.html
+++ b/if -이프/html/K-pop.html
@@ -108,7 +108,7 @@
         <div class="gallery-container">
           <img
             class="gallery-item gallery-item-1"
-            src="../img/carousel/있지.jpg"
+            src="../img/K-pop/르세라핌.jpeg"
             data-index="1"
           />
           <img
@@ -128,7 +128,7 @@
           />
           <img
             class="gallery-item gallery-item-5"
-            src="../img/carousel/샤이니.jpg"
+            src="../img/K-pop/비비 밤양갱 2.jpeg"
             data-index="5"
           />
         </div>
@@ -250,12 +250,24 @@
             <li class="dots">btn05</li>
           </ul>
         </div>
-      <!-- <div class="music">
+       <div class="music">
         <h4>오늘의 노래 추천</h4>
         <img src="../img/K-pop/밤양갱 - 비비.jpeg" width="300px" height="300px">
         <audio  class="music-PLAY" src="../img/BIBI - 비비 (BIBI) - 밤양갱(Bam Yang Gang) Official MV.mp3" controls></audio>
-     </div> -->
+     </div> 
   </main>
+  <footer>
+     <!-- 7. 푸터 -->
+     <div class="member-footer">
+      <div>
+        <a href="#none">이용약관</a>
+        <a href="#none">개인정보처리방침</a>
+        <a href="#none">책임의 한계와 법적고지</a>
+        <a href="#none">회원정보 고객센터</a>
+      </div>
+      <span><a href="#none">IF Corp.</a></span>
+    </div>
+  </footer>
  </body>
 </html>
 <script>
