--- a/if -이프/html/IF-main.html
+++ b/if -이프/html/IF-main.html
@@ -121,15 +121,9 @@
               </li>
               <!-- <li class="nav-item dropdown"></li> -->
             </ul>
-            <form class="d-flex mt-3" role="search">
-              <input
-                class="form-control me-2"
-                type="search"
-                placeholder="Search"
-                aria-label="Search"
-              />
-              <button class="btn btn-success" type="submit">Search</button>
-            </form>
+           <div>
+            <img src="../img/기타/은색 헤드셋.png" width="300px" height="300px">
+           </div>
           </div>
         </div>
       </div>
